# the-hood

./: .gitignore  .gitmodules  README.md  hood_sql.ini  server.cfg
compiler/include/: bcrypt.inc
plugin_src/: CMakeLists.txt  CMakeSettings.json
plugin_src/lib/: CMakeLists.txt
plugin_src/lib/raknet/: BitStream.cpp  BitStream.h  RakNet.h
plugin_src/src/: Player.cpp  Player.hpp  exports.def  main.cpp  main.hpp  pch.h
plugin_src/src/natives/: Natives.cpp  Natives.hpp  Weapons.cpp
plugin_src/src/raknet/: CRakServer.cpp  CRakServer.hpp  RakUtil.hpp
scriptfiles/: AnimationSaved.txt  CamEdit_console.txt  schema.sql
source/: main.pwn
source/core/commands/: callbacks.pwn  functions.pwn  header.pwn
source/core/config/: callbacks.pwn  functions.pwn  header.pwn
source/core/fixes/: textdraws.pwn
source/core/timers/: callbacks.pwn  functions.pwn  header.pwn
source/core/transitions/: callbacks.pwn  functions.pwn  header.pwn
source/core/utils/: bcrypt_inline.pwn  colour.pwn  functions.pwn  header.pwn  objects_inline.pwn
source/player/account/: callbacks.pwn  functions.pwn  header.pwn
source/player/auth/: callbacks.pwn  functions.pwn  header.pwn
source/player/cellphone/: functions.pwn  header.pwn
source/player/inventory/: callbacks.pwn  functions.pwn  header.pwn
source/player/keygame/: callbacks.pwn  functions.pwn  header.pwn
source/player/needs/: callbacks.pwn  commands.pwn  functions.pwn  header.pwn
source/player/weapons/: callbacks.pwn  functions.pwn  header.pwn
source/server/chat/: callbacks.pwn  commands.pwn  functions.pwn  header.pwn
source/server/chatbuffer/: callbacks.pwn  functions.pwn  header.pwn
source/server/database/: callbacks.pwn  header.pwn
source/server/enter_exits/: callbacks.pwn  functions.pwn  header.pwn
source/server/jobs/: callbacks.pwn  (+2 more)
(+16 files in other folders)
